--- a/ExtractingFeatures.ipynb
+++ b/ExtractingFeatures.ipynb
@@ -25,14 +25,14 @@
    "metadata": {},
    "source": [
     "#### ** (1a) 1-of-k encoding **\n",
-    "#### Categorical features refer to variables that can take one of a set of possible states at any given time.We would like to develop code to convert categorical features to numerical ones. In this exercise, we will work with a sample unlabeled dataset with four data points, with each data point representing a city. The first feature indicates the name of city (Beijing, Paris, Londre, New York); the second feature describes the temperature of the city (33., 15.); and the third (optional) feature describes how the city is polluted (very much, a little).\n",
+    "#### Categorical features refer to variables that can take one of a set of possible states at any given time.We would like to develop code to convert categorical features to numerical ones. In this exercise, we will work with a sample unlabeled dataset with four data points, with each data point representing a city. The first feature indicates the name of city (Beijing, Paris, Londre, New York); the second feature describes which continent the city is; and the third (optional) feature describes how the city is polluted (very much, a little).\n",
     "#### In an 1-of-k approach, we want to represent each tuple of `(featureID, category)` via its own binary feature.  We can do this in Python by creating a dictionary that maps each tuple to a distinct integer, where the integer corresponds to a binary feature. To start, manually enter the entries in the OHE dictionary associated with the sample dataset by mapping the tuples to consecutive integers starting from zero,  ordering the tuples first by featureID and next by category.\n",
     "#### Later in this workshop, we'll use OHE dictionaries to transform data points into compact lists of features that can be used in machine learning algorithms."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -40,16 +40,16 @@
    "source": [
     "# Data for manual OHE\n",
     "# Note: the first data point does not include any value for the optional third feature\n",
-    "cityOne = [(0, 'Beijing'), (1, '33.'), (2, 'very much')]\n",
-    "cityTwo = [(0, 'Paris'), (1, '15.')]\n",
-    "cityThree =  [(0, 'London'), (1, '15.'), (2, 'a little')]\n",
-    "cityFour =  [(0, 'New York'), (1, '10.'), (2, 'a little')]\n",
+    "cityOne = [(0, 'Beijing'), (1, 'Asia'), (2, 'very much')]\n",
+    "cityTwo = [(0, 'Paris'), (1, 'Europe')]\n",
+    "cityThree =  [(0, 'London'), (1, 'Europe'), (2, 'a little')]\n",
+    "cityFour =  [(0, 'New York'), (1, 'American'), (2, 'a little')]\n",
     "sampleDataRDD = sc.parallelize([cityOne, cityTwo, cityThree,cityFour])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -61,9 +61,9 @@
     "cityOHEDict[(0,'Paris')] = 1\n",
     "cityOHEDict[(0,'London')] = 2\n",
     "cityOHEDict[(0,'New York')] = 3\n",
-    "cityOHEDict[(1, '33.')] = 4\n",
-    "cityOHEDict[(1, '15.')] = 5\n",
-    "cityOHEDict[(1, '10.')] = 6\n",
+    "cityOHEDict[(1, 'Asia')] = 4\n",
+    "cityOHEDict[(1, 'Europe')] = 5\n",
+    "cityOHEDict[(1, 'American')] = 6\n",
     "cityOHEDict[(2, 'very much')] = 7\n",
     "cityOHEDict[(2, 'a little')] = 8"
    ]
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -156,27 +156,27 @@
    "metadata": {},
    "source": [
     "#### **(1c) 1-of-k encoding features as sparse vectors **\n",
-    "#### Now let's see how we can represent the 1-of-k features for points in our sample dataset.  Using the mapping defined by the OHE dictionary from Part (1a), manually define 1-of-k features for the three sample data points using SparseVector format.  Any feature that occurs in a point should have the value 1.0.  For example, the `DenseVector` for a point with features 1 and 5 would be `[0.0, 1.0, 0.0, 0.0, 0.0,1.0, 0.0, 0.0,0.0,0.0]`."
+    "#### Now let's see how we can represent the 1-of-k features for points in our sample dataset.  Using the mapping defined by the OHE dictionary from Part (1a), manually define 1-of-k features for the four sample data points using SparseVector format.  Any feature that occurs in a point should have the value 1.0.  For example, the `DenseVector` for a point with features 1 and 5 would be `[0.0, 1.0, 0.0, 0.0, 0.0,1.0, 0.0, 0.0,0.0,0.0]`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Reminder of the sample features\n",
-    "# cityOne = [(0, 'Beijing'), (1, '33.'), (2, 'very much')]\n",
-    "# cityTwo = [(0, 'Paris'), (1, '15.')]\n",
-    "# cityThree =  [(0, 'London'), (1, '15.'), (2, 'a little')]\n",
-    "# cityFour =  [(0, 'New York'), (1, '10.'), (2, 'a little')]"
+    "# cityOne = [(0, 'Beijing'), (1, 'Asia'), (2, 'very much')]\n",
+    "# cityTwo = [(0, 'Paris'), (1, 'Europe')]\n",
+    "# cityThree =  [(0, 'London'), (1, 'Europe'), (2, 'a little')]\n",
+    "# cityFour =  [(0, 'New York'), (1, 'American'), (2, 'a little')]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -193,8 +193,8 @@
    "source": [
     "# TODO: Replace <FILL IN> with appropriate code\n",
     "cityOneOHEFeaturesManual = SparseVector(9, [0,4,7],[1.,1.,1.])\n",
-    "cityTwoOHEFeaturesManual =  SparseVector(9, [1,5],[1.,1.])\n",
-    "cityThreeOHEFeaturesManual =  SparseVector(9, [2,5,8],[1.,1.,1.])\n",
+    "cityOneOHEFeaturesManual =  SparseVector(9, [1,5],[1.,1.])\n",
+    "cityOneOHEFeaturesManual =  SparseVector(9, [2,5,8],[1.,1.,1.])\n",
     "cityFourOHEFeaturesManual =  SparseVector(9, [3,6,8],[1.,1.,1.])\n",
     "print cityOneOHEFeaturesManual\n",
     "print cityTwoOHEFeaturesManual"
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -220,13 +220,13 @@
    ],
    "source": [
     "# TEST OHE Features as sparse vectors (1c)\n",
-    "Test.assertTrue(isinstance(cityOneOHEFeatures, SparseVector),\n",
+    "Test.assertTrue(isinstance(cityOneOHEFeaturesManual, SparseVector),\n",
     "                'cityOneOHEFeatures needs to be a SparseVector')\n",
-    "Test.assertTrue(isinstance(cityTwoOHEFeatures, SparseVector),\n",
+    "Test.assertTrue(isinstance(cityOneOHEFeaturesManual, SparseVector),\n",
     "                'cityTwoOHEFeatures needs to be a SparseVector')\n",
-    "Test.assertTrue(isinstance(cityThreeOHEFeatures, SparseVector),\n",
+    "Test.assertTrue(isinstance(cityOneOHEFeaturesManual, SparseVector),\n",
     "                'cityThreeOHEFeatures needs to be a SparseVector')\n",
-    "Test.assertTrue(isinstance(cityFourOHEFeatures, SparseVector),\n",
+    "Test.assertTrue(isinstance(cityFourOHEFeaturesManual, SparseVector),\n",
     "                'cityFourOHEFeatures needs to be a SparseVector')"
    ]
   },
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -249,7 +249,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(0, 'Beijing'): 0, (0, 'London'): 2, (0, 'New York'): 3, (1, '10.'): 6, (2, 'a little'): 8, (1, '33.'): 4, (2, 'very much'): 7, (0, 'Paris'): 1, (1, '15.'): 5}\n",
+      "{(0, 'Beijing'): 0, (2, 'a little'): 8, (0, 'London'): 2, (0, 'New York'): 3, (1, 'Asia'): 4, (1, 'American'): 6, (2, 'very much'): 7, (1, 'Europe'): 5, (0, 'Paris'): 1}\n",
       "(9,[0,4,7],[1.0,1.0,1.0])\n"
      ]
     }
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
@@ -304,7 +304,7 @@
     "                'cityOneOHEFeatures should equal cityOneOHEFeaturesManual')\n",
     "Test.assertEquals(cityOneOHEFeatures, SparseVector(9,[0,4,7],[1.0,1.0,1.0]),\n",
     "                  'incorrect value for cityOneOHEFeatures')\n",
-    "Test.assertEquals(oneHotEncoding([(0, 'Beijing'), (1, '33.'),(2, 'very much')], cityOHEDict), \n",
+    "Test.assertEquals(oneHotEncoding([(0, 'Beijing'), (1, 'Asia'),(2, 'very much')], cityOHEDict), \n",
     "                  SparseVector(9, [0,4,7], [1.0,1.0,1.0]),\n",
     "                  'incorrect definition for oneHotEncoding')"
    ]
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -380,12 +380,12 @@
    "metadata": {},
    "source": [
     "#### **(2a) Pair RDD of `(featureID, category)` **\n",
-    "#### To start, create an RDD of distinct `(featureID, category)` tuples. In our sample dataset, the 9 items in the resulting RDD are `(0, 'Beijing')`, `(0, 'Paris')`, `(0, 'London')`, `(0, 'New York')`,`(1, '33.')`, `(1, '15.')`, `(1, '10.')`, `(2, 'a little')`, `(2, 'very much')`. Notably `'15.'` appears twice in the dataset but only contributes one item to the RDD: `(1, '15')`.  Use [flatMap](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.flatMap) and [distinct](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.distinct)."
+    "#### To start, create an RDD of distinct `(featureID, category)` tuples. In our sample dataset, the 9 items in the resulting RDD are `(0, 'Beijing')`, `(0, 'Paris')`, `(0, 'London')`, `(0, 'New York')`,`(1, 'Asia')`, `(1, 'Europe')`, `(1, 'Americain')`, `(2, 'a little')`, `(2, 'very much')`. Notably `'Europe'` appears twice in the dataset but only contributes one item to the RDD: `(1, '15')`.  Use [flatMap](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.flatMap) and [distinct](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.distinct)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -394,7 +394,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, '10.'), (1, '15.'), (1, '33.'), (2, 'a little'), (2, 'very much')]\n"
+      "[(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, 'American'), (1, 'Asia'), (1, 'Europe'), (2, 'a little'), (2, 'very much')]\n"
      ]
     }
    ],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -424,7 +424,7 @@
     "# TEST Pair RDD of (featureID, category) (2a)\n",
     "Test.assertEquals(sorted(sampleDistinctFeats.collect()),\n",
     "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), \n",
-    "                   (1, '10.'), (1, '15.'), (1, '33.'), (2, 'a little'), (2, 'very much')],\n",
+    "                   (1, 'American'), (1, 'Asia'), (1, 'Europe'), (2, 'a little'), (2, 'very much')],\n",
     "                  'incorrect value for sampleDistinctFeats')"
    ]
   },
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -447,7 +447,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(0, 'Beijing'): 0, (0, 'London'): 1, (0, 'New York'): 2, (1, '10.'): 3, (2, 'a little'): 4, (1, '33.'): 5, (2, 'very much'): 6, (0, 'Paris'): 7, (1, '15.'): 8}\n"
+      "{(0, 'Beijing'): 0, (1, 'American'): 5, (0, 'London'): 2, (0, 'New York'): 3, (1, 'Asia'): 4, (2, 'a little'): 1, (2, 'very much'): 6, (1, 'Europe'): 7, (0, 'Paris'): 8}\n"
      ]
     }
    ],
@@ -460,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -469,7 +469,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, '10.'), (1, '15.'), (1, '33.'), (2, 'a little'), (2, 'very much')]\n",
+      "[(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, 'American'), (1, 'Asia'), (1, 'Europe'), (2, 'a little'), (2, 'very much')]\n",
       "1 test passed.\n",
       "1 test passed.\n"
      ]
@@ -479,8 +479,8 @@
     "# TEST OHE Dictionary from distinct features (2b)\n",
     "print sorted(sampleOHEDict.keys())\n",
     "Test.assertEquals(sorted(sampleOHEDict.keys()),\n",
-    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, '10.'), (1, '15.'), \n",
-    "                   (1, '33.'), (2, 'a little'), (2, 'very much')],\n",
+    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, 'American'), (1, 'Asia'), \n",
+    "                   (1, 'Europe'), (2, 'a little'), (2, 'very much')],\n",
     "                  'sampleOHEDict has unexpected keys')\n",
     "Test.assertEquals(sorted(sampleOHEDict.values()), range(9), 'sampleOHEDict has unexpected values')"
    ]
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -504,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{(0, 'Beijing'): 0, (0, 'London'): 1, (0, 'New York'): 2, (1, '10.'): 3, (2, 'a little'): 4, (1, '33.'): 5, (2, 'very much'): 6, (0, 'Paris'): 7, (1, '15.'): 8}\n"
+      "{(0, 'Beijing'): 0, (1, 'American'): 5, (0, 'London'): 2, (0, 'New York'): 3, (1, 'Asia'): 4, (2, 'a little'): 1, (2, 'very much'): 6, (1, 'Europe'): 7, (0, 'Paris'): 8}\n"
      ]
     }
    ],
@@ -553,12 +553,21 @@
    "source": [
     "# TEST Automated creation of an OHE dictionary (2c)\n",
     "Test.assertEquals(sorted(sampleOHEDictAuto.keys()),\n",
-    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, '10.'), (1, '15.'), \n",
-    "                   (1, '33.'), (2, 'a little'), (2, 'very much')],\n",
+    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, 'American'), (1, 'Asia'), \n",
+    "                   (1, 'Europe'), (2, 'a little'), (2, 'very much')],\n",
     "                  'sampleOHEDictAuto has unexpected keys')\n",
     "Test.assertEquals(sorted(sampleOHEDictAuto.values()), range(9),\n",
     "                  'sampleOHEDictAuto has unexpected values')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
