update one feature

--- a/ExtractingFeatures-HandsOn.ipynb
+++ b/ExtractingFeatures-HandsOn.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "#### ** (1a) 1-of-k encoding **\n",
-    "#### Categorical features refer to variables that can take one of a set of possible states at any given time.We would like to develop code to convert categorical features to numerical ones. In this exercise, we will work with a sample unlabeled dataset with four data points, with each data point representing a city. The first feature indicates the name of city (Beijing, Paris, Londre, New York); the second feature describes the temperature of the city (33., 15.); and the third (optional) feature describes how the city is polluted (very much, a little).\n",
+    "#### Categorical features refer to variables that can take one of a set of possible states at any given time.We would like to develop code to convert categorical features to numerical ones. In this exercise, we will work with a sample unlabeled dataset with four data points, with each data point representing a city. The first feature indicates the name of city (Beijing, Paris, Londre, New York); the second feature describes which continent the city is; and the third (optional) feature describes how the city is polluted (very much, a little).\n",
     "#### In an 1-of-k approach, we want to represent each tuple of `(featureID, category)` via its own binary feature.  We can do this in Python by creating a dictionary that maps each tuple to a distinct integer, where the integer corresponds to a binary feature. To start, manually enter the entries in the OHE dictionary associated with the sample dataset by mapping the tuples to consecutive integers starting from zero,  ordering the tuples first by featureID and next by category.\n",
     "#### Later in this workshop, we'll use One Hot encoding dictionaries to transform data points into compact lists of features that can be used in machine learning algorithms."
    ]
@@ -39,10 +39,10 @@
    "outputs": [],
    "source": [
     "# Data for manual \n",
-    "cityOne = [(0, 'Beijing'), (1, '33.'), (2, 'very much')]\n",
-    "cityTwo = [(0, 'Paris'), (1, '15.')]\n",
-    "cityThree =  [(0, 'London'), (1, '15.'), (2, 'a little')]\n",
-    "cityFour =  [(0, 'New York'), (1, '10.'), (2, 'a little')]\n",
+    "cityOne = [(0, 'Beijing'), (1, 'Asia'), (2, 'very much')]\n",
+    "cityTwo = [(0, 'Paris'), (1, 'Europe')]\n",
+    "cityThree =  [(0, 'London'), (1, 'Europe'), (2, 'a little')]\n",
+    "cityFour =  [(0, 'New York'), (1, 'American'), (2, 'a little')]\n",
     "sampleDataRDD = sc.parallelize([cityOne, cityTwo, cityThree,cityFour])"
    ]
   },
@@ -60,9 +60,9 @@
     "cityOHEDict[(0,'Paris')] = <FILL IN>\n",
     "cityOHEDict[(0,'London')] = <FILL IN>\n",
     "cityOHEDict[(0,'New York')] = <FILL IN>\n",
-    "cityOHEDict[(1, '33.')] = <FILL IN>\n",
-    "cityOHEDict[(1, '15.')] = <FILL IN>\n",
-    "cityOHEDict[(1, '10.')] = <FILL IN>\n",
+    "cityOHEDict[(1, 'Asia')] = <FILL IN>\n",
+    "cityOHEDict[(1, 'Europe')] = <FILL IN>\n",
+    "cityOHEDict[(1, 'American')] = <FILL IN>\n",
     "cityOHEDict[(2, 'very much')] = <FILL IN>\n",
     "cityOHEDict[(2, 'a little')] = <FILL IN>"
    ]
@@ -168,10 +168,10 @@
    "outputs": [],
    "source": [
     "# Reminder of the sample features\n",
-    "# cityOne = [(0, 'Beijing'), (1, '33.'), (2, 'very much')]\n",
-    "# cityTwo = [(0, 'Paris'), (1, '15.')]\n",
-    "# cityThree =  [(0, 'London'), (1, '15.'), (2, 'a little')]\n",
-    "# cityFour =  [(0, 'New York'), (1, '10.'), (2, 'a little')]"
+    "# cityOne = [(0, 'Beijing'), (1, 'Asia'), (2, 'very much')]\n",
+    "# cityTwo = [(0, 'Paris'), (1, 'Europe')]\n",
+    "# cityThree =  [(0, 'London'), (1, 'Europe'), (2, 'a little')]\n",
+    "# cityFour =  [(0, 'New York'), (1, 'American'), (2, 'a little')]"
    ]
   },
   {
@@ -304,7 +304,7 @@
     "                'cityOneOHEFeatures should equal cityOneOHEFeaturesManual')\n",
     "Test.assertEquals(cityOneOHEFeatures, SparseVector(9,[0,4,7],[1.0,1.0,1.0]),\n",
     "                  'incorrect value for cityOneOHEFeatures')\n",
-    "Test.assertEquals(oneHotEncoding([(0, 'Beijing'), (1, '33.'),(2, 'very much')], cityOHEDict), \n",
+    "Test.assertEquals(oneHotEncoding([(0, 'Beijing'), (1, 'Asia'),(2, 'very much')], cityOHEDict), \n",
     "                  SparseVector(9, [0,4,7], [1.0,1.0,1.0]),\n",
     "                  'incorrect definition for oneHotEncoding')"
    ]
@@ -380,7 +380,7 @@
    "metadata": {},
    "source": [
     "#### **(2a) Pair RDD of `(featureID, category)` **\n",
-    "#### To start, create an RDD of distinct `(featureID, category)` tuples. In our sample dataset, the 9 items in the resulting RDD are `(0, 'Beijing')`, `(0, 'Paris')`, `(0, 'London')`, `(0, 'New York')`,`(1, '33.')`, `(1, '15.')`, `(1, '10.')`, `(2, 'a little')`, `(2, 'very much')`. Notably `'15.'` appears twice in the dataset but only contributes one item to the RDD: `(1, '15')`.  Use [flatMap](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.flatMap) and [distinct](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.distinct)."
+    "#### To start, create an RDD of distinct `(featureID, category)` tuples. In our sample dataset, the 9 items in the resulting RDD are `(0, 'Beijing')`, `(0, 'Paris')`, `(0, 'London')`, `(0, 'New York')`,`(1, 'Asia')`, `(1, 'Europe')`, `(1, 'American')`, `(2, 'a little')`, `(2, 'very much')`. Notably `'Europe'` appears twice in the dataset but only contributes one item to the RDD: `(1, '15')`.  Use [flatMap](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.flatMap) and [distinct](https://spark.apache.org/docs/latest/api/python/pyspark.html#pyspark.RDD.distinct)."
    ]
   },
   {
@@ -423,7 +423,7 @@
     "# TEST Pair RDD of (featureID, category) (2a)\n",
     "Test.assertEquals(sorted(sampleDistinctFeats.collect()),\n",
     "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), \n",
-    "                   (1, '10.'), (1, '15.'), (1, '33.'), (2, 'a little'), (2, 'very much')],\n",
+    "                   (1, 'American'), (1, 'Asia'), (1, 'Europe'), (2, 'a little'), (2, 'very much')],\n",
     "                  'incorrect value for sampleDistinctFeats')"
    ]
   },
@@ -477,8 +477,8 @@
    "source": [
     "print sorted(sampleOHEDict.keys())\n",
     "Test.assertEquals(sorted(sampleOHEDict.keys()),\n",
-    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, '10.'), (1, '15.'), \n",
-    "                   (1, '33.'), (2, 'a little'), (2, 'very much')],\n",
+    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, 'American'), (1, 'Asia'), \n",
+    "                   (1, 'Europe'), (2, 'a little'), (2, 'very much')],\n",
     "                  'sampleOHEDict has unexpected keys')\n",
     "Test.assertEquals(sorted(sampleOHEDict.values()), range(9), 'sampleOHEDict has unexpected values')"
    ]
@@ -551,8 +551,8 @@
    "source": [
     "# TEST Automated creation of an OHE dictionary (2c)\n",
     "Test.assertEquals(sorted(sampleOHEDictAuto.keys()),\n",
-    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, '10.'), (1, '15.'), \n",
-    "                   (1, '33.'), (2, 'a little'), (2, 'very much')],\n",
+    "                  [(0, 'Beijing'), (0, 'London'), (0, 'New York'), (0, 'Paris'), (1, 'American'), (1, 'Asia'), \n",
+    "                   (1, 'Europe'), (2, 'a little'), (2, 'very much')],\n",
     "                  'sampleOHEDictAuto has unexpected keys')\n",
     "Test.assertEquals(sorted(sampleOHEDictAuto.values()), range(9),\n",
     "                  'sampleOHEDictAuto has unexpected values')"
