simplify the exercise

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -107,7 +107,7 @@
     "        featureIDs should start at 0 and increase to the number of features - 1.\n",
     "\n",
     "    Args:\n",
-    "        point (str): A comma separated string where the first value is the label and the rest\n",
+    "        data (str): A comma separated string where the first value is the label and the rest\n",
     "            are features.\n",
     "\n",
     "    Returns:\n",
@@ -168,7 +168,7 @@
     "            made up of a list of (featureID, value) tuples.\n",
     "\n",
     "    Returns:\n",
-    "        dict: A dictionary where the keys are (featureID, value) tuples and map to values that are\n",
+    "        dictionary: A dictionary where the keys are (featureID, value) tuples and map to values that are\n",
     "            unique integers.\n",
     "    \"\"\"\n",
     "    \n",
@@ -228,11 +228,14 @@
     "\n",
     "    Note:\n",
     "        You should ensure that the indices used to create a SparseVector are sorted.\n",
+    "        Because some categorical values will likely appear in validation/Test data \n",
+    "        that did not exist in the training data. \n",
+    "        To deal with this situation, ignoring unseen categories in validation/test data\n",
     "\n",
     "    Args:\n",
     "        rawFeats (list of (int, str)): The features corresponding to a single observation.  Each\n",
-    "            feature consists of a tuple of featureID and the feature's value. (e.g. sampleOne)\n",
-    "        OHEDictionary (dict): A mapping of (featureID, value) to unique integer.\n",
+    "            feature consists of a tuple of featureID and the feature's value.\n",
+    "        OHEDictionary: A mapping of (featureID, value) to unique integer.\n",
     "\n",
     "    Returns:\n",
     "        SparseVector: A SparseVector of length numOHEFeats with indicies equal to the unique\n",
@@ -244,13 +247,11 @@
     "    \"\"\"Obtain the label and feature vector for this raw observation.\n",
     "\n",
     "    Note:\n",
-    "        You must use the function `oneHotEncoding` in this implementation or later portions\n",
-    "        of this lab may not function as expected.\n",
-    "\n",
+    "        You must use the function `oneHotEncoding` in this implementation.\n",
     "    Args:\n",
-    "        point (str): A comma separated string where the first value is the label and the rest\n",
+    "        data (str): A comma separated string where the first value is the label and the rest\n",
     "            are features.\n",
-    "        OHEDict (dict of (int, str) to int): Mapping of (featureID, value) to unique integer.\n",
+    "        OHEDictionary (dictionary of (int, str) to int): Mapping of (featureID, value) to unique integer.\n",
     "        numOHEFeats (int): The number of unique features in the training dataset.\n",
     "\n",
     "    Returns:\n",
