simplify the exercise

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -323,17 +323,7 @@
     "    if y == 1.:\n",
     "        return -log(p+epsilon)\n",
     "    if y == 0.:\n",
-    "        return -log(1-p+epsilon)\n",
-    "    \n",
-    "print computeLogLoss(.5, 1)\n",
-    "print computeLogLoss(.5, 0)\n",
-    "print computeLogLoss(.99, 1)\n",
-    "print computeLogLoss(.99, 0)\n",
-    "print computeLogLoss(.01, 1)\n",
-    "print computeLogLoss(.01, 0)\n",
-    "print computeLogLoss(0, 1)\n",
-    "print computeLogLoss(1, 1)\n",
-    "print computeLogLoss(1, 0)"
+    "        return -log(1-p+epsilon)"
    ]
   },
   {
