simplify the exercise

--- a/LogisticRegression.ipynb
+++ b/LogisticRegression.ipynb
@@ -410,7 +410,7 @@
    "metadata": {},
    "source": [
     "#### ** Traning the model with Logistic regression **\n",
-    "####  First use [LogisticRegressionWithSGD](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.classification.LogisticRegressionWithSGD) to train a model using `OHETrainData` with the given hyperparameter configuration. Next, use the `LogisticRegressionModel.weights` and `LogisticRegressionModel.intercept` attributes to print out the model's parameters."
+    "####  First use [LogisticRegressionWithSGD](https://spark.apache.org/docs/latest/api/python/pyspark.mllib.html#pyspark.mllib.classification.LogisticRegressionWithSGD) to train serveral models using `OHETrainData` with the given differente hyperparameter configuration. Getting the best model finally"
    ]
   },
   {
